--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="popularity">popular</string>
     <string name="top_rated">top_rated</string>
     <string name="pref_sort_by_key">sort_by</string>
+    <string name="trailer">Trailer:</string>
+    <string name="review">Review</string>
 
     <string-array name="entries">
         <item>@string/label_popularity</item>
