--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,23 +8,33 @@
     <string name="vote_average">Vote Average</string>
     <string name="settings">Settings</string>
     <string name="settings_detail">Settings</string>
+
+
     <string name="label_top_rated">Top Rated</string>
     <string name="label_popularity">Popular</string>
+    <string name="label_favourite">Favourite</string>
+
     <string name="popularity">popular</string>
     <string name="top_rated">top_rated</string>
+    <string name="favourite">favourite</string>
+
     <string name="pref_sort_by_key">sort_by</string>
     <string name="trailer">Trailer:</string>
     <string name="review">Review</string>
+    <string name="mark_as_favourite">Mark as favourite</string>
+    <string name="mark_as_favourites">mark as favourite</string>
+    <string name="mark_as_favouritess">Mark as favourite</string>
 
     <string-array name="entries">
         <item>@string/label_popularity</item>
         <item>@string/label_top_rated</item>
+        <!--<item>@string/label_favourite</item>-->
 
     </string-array>
 
     <string-array name="entryValue">
         <item>@string/popularity</item>
         <item>@string/top_rated</item>
-
+        <!--<item>@string/favourite</item>-->
     </string-array>
 </resources>
