--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,35 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Popular Movies</string>
+    <string name="app_name" translatable="false">Popular Movies</string>
     <string name="refresh">Refresh</string>
     <string name="detail_activity_label">Movie Details</string>
-    <string name="settings">Settings</string>
-    <string name="settings_detail">Settings</string>
+    <string name="settings" translatable="false">Settings</string>
+    <string name="settings_detail" translatable="false">Settings</string>
 
 
     <string name="label_top_rated">Top Rated</string>
     <string name="label_popularity">Popular</string>
     <string name="label_favourite">Favourite</string>
 
-    <string name="popularity">popular</string>
-    <string name="top_rated">top_rated</string>
-    <string name="favourite">favourite</string>
+    <string name="popularity" translatable="false">popular</string>
+    <string name="top_rated" translatable="false">top_rated</string>
+    <string name="favourite" translatable="false">favourite</string>
 
-    <string name="pref_sort_by_key">sort_by</string>
+    <string name="pref_sort_by_key" translatable="false">sort_by</string>
     <string name="trailer">Trailer:</string>
-    <string name="share">Share</string>
+    <string name="share" translatable="false">Share</string>
 
     <string name="sync_account_type">sunshine.com</string>
-    <string name="content_authority">com.sunshine.popularmovies</string>
+    <string name="content_authority" translatable="false">com.sunshine.popularmovies</string>
+
+    <string name="no_internet_available">No Internet Available</string>
+    <string name="no_favourite_movie">Favourite Movie not Availbale.</string>
+
+    <string name="overview"><b>Overview:</b>\n</string>
+    <string name="release_date">Release Date: </string>
+    <string name="vote_avg">Vote Average: </string>
+    <string name="vote_count">Vote Count: </string>
+    <string name="popularity_text">Popularity: </string>
 
     <string-array name="entries">
         <item>@string/label_popularity</item>
@@ -33,4 +43,7 @@
         <item>@string/top_rated</item>
         <item>@string/favourite</item>
     </string-array>
+
+
+    <string name="no_movie_data_available">No Movie Information Available</string>
 </resources>
